# micro-pay

./: .env  .gitignore  Cargo.toml  README.md  README_en.md  config.toml  dev_db.sh  package-lock.json  package.json
docs/: API.md
integration/: account_test.ts  payment_test.ts
src/: ckb.rs  config.rs  db.rs  error.rs  index.ts  main.rs  models.rs  types.rs
src/api/: errorCodes.ts  mod.rs  payment.rs  payment.ts  query.rs
src/db/: index.ts
src/models/: account.ts  payment.ts  platformAddress.ts
src/services/: accountService.ts  ckbService.ts  ckbTransactionCheckService.ts  paymentCheckService.ts  paymentCleanupService.ts  paymentService.ts
tests/: account.concurrency.test.ts  payment.concurrency.test.ts  platformAddress.concurrency.test.ts
