[package]
name = "micro-pay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio", "debug-print", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
ckb-sdk = "4.4"
ckb-types = "0.202"
ckb-jsonrpc-types = "0.202"
time = { version = "0.3", features = ["serde"] }
config = "0.15"
tokio-cron-scheduler = "0.15"
anyhow = "1.0"
thiserror = "2.0"
once_cell = "1.21"
hex = "0.4"
